# floem-editor-view

./: Cargo.toml  README.md
editor-core/: Cargo.toml
examples/editor/: Cargo.toml
examples/editor/src/: main.rs
src/editor/: actions.rs  editor.rs  gutter.rs  layout.rs  phantom_text.rs  text.rs  view.rs  visual_line.rs
src/editor/keypress/: key.rs  mod.rs  press.rs
